--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
     </html>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello World</h1>
-      <p>Hello there!<i class="fa-brands fa-instagram"></i></p>
+    <div class="hero">
+      <p>✌ Hello, I am</p>
+      <h1>Patricia Pereira</h1>
+      <h2 class="mb-4">Front-end Developer based in Portugal</h2>
+      <div><a href="#" class="btn btn-primary">Contact me</a></div>
     </div>
   </body>
 </html>
