--- a/index.html
+++ b/index.html
@@ -67,38 +67,66 @@
         </div>
       </div>
       <div class="row mb-5">
-      <div class="col">
-        <div class="project-description">
-          <h2 class="mb-5">Weather App</h2>
-          <p class="mb-4 opacity-75">
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
-          </p>
-          <a href="" class="btn btn-branding-outline">Launch project</a>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-4 opacity-75">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch project</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/Weather.png.png" class="img-fluid" alt="" />
         </div>
       </div>
-      <div class="col d-none d-lg-block">
-        <img src="images/Weather.png.png" class="img-fluid" alt="" />
-      </div>
-    </div>
-    <div class="row mb-5">
-      <div class="col d-none d-lg-block">
-        <img src="images/Dictionary.png.png" class="img-fluid" alt="" />
-      </div>
-      <div class="col">
-        <div class="project-description">
-          <h2 class="mb-5">Dictionary Project</h2>
-          <p class="mb-4 opacity-75">
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
-          </p>
-          <a href="" class="btn btn-branding-outline">Launch project</a>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/Dictionary.png.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Dictionary Project</h2>
+            <p class="mb-4 opacity-75">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch project</a>
+          </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between mb-4">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding-outline mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:patricia@gmail.com" class="e-mail-link"
+            >patricia@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-4">
+          <a href="https://wwww.github.com/patricia" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://wwww.instagram.com/patricia" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://wwww.facebook.com/patricia" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
