--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding-outline mt-3">Contact me</a>
+            <a href class="btn btn-primary mt-3">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
