--- a/work.html
+++ b/work.html
@@ -37,23 +37,31 @@
 </head>
   <body>
     <div class="content-container container">
-        <div class="row">
-        <div class="col-lg-6">
-            <div class="content">
-    <h1 class="mb-4">Hi I am Patricia Pereira</h1>
-    <h2 class="mb-4">Frontend Developer, based in Portugal</h2>
-    <p class="mb-4">
-      For anyone who wants to start learning code, this workshop is very
-      interesting. You will be challenged with different exercises, and
-      everything is well explained, homework and deadlines are good for keep
-      focus
-    </p>
-    <a href="" class="btn btn-primary">See my projects</a>
+        <div class="content">
+         <h1 class="mb-4">Take a look at what I've been working on!</h1>
+    <div class="row">
+    <div class="col-md-6 mb-4">
+<img src="images/yogurt.png.png" class="img-fluid rounded" alt="" />
+<h3 class="text-center">Yogurt Project</h3> 
+<p class="text-center text-muted">Built with HTML and CSS</p>
 </div>
+ <div class="col-md-6 mb-4">
+<img src="images/Weather.png.png" class="img-fluid rounded" alt="" />
+<h3 class="text-center">Weather Project</h3> 
+<p class="text-center text-muted">Built with HTML and CSS</p>
 </div>
-     <div class="col-lg-6">
-    <img src="images/Patricia picture.png" alt="" class="img-fluid" />
+<div class="col-md-6 mb-4">
+<img src="images/Dictionary.png.png" class="img-fluid rounded" alt="" />
+<h3 class="text-center">Dictionary App</h3> 
+<p class="text-center text-muted">Built with HTML and CSS</p>
+</div>
+<div class="col-md-6 mb-4">
+<img src="images/Translation.app.png" class="img-fluid rounded" alt="" />
+<h3 class="text-center">Translation App</h3> 
+<p class="text-center text-muted">Built with HTML and CSS</p>
+</div>
     </div>
+        </div>
     </div>
   </body>
 </html>
