--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
     </html>
   </head>
   <body>
+     <div class="container">
+    <nav class="d-flex justify-content-between">
+      <a href="/">
+            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="" />
+          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="" />
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a></li>
+          <li><a href="/about.html"> About</a></li>
+          <li><a href="/work.html"> Work</a></li>
+          <li><a href="/contact.html"> Contact</a></li>
+        </a>
+        </ul>
+      </div>
+    </nav>
     <div class="hero">
       <p>✌ Hello, I am</p>
       <h1>Patricia Pereira</h1>
