--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!DOCTYPE html>
-    <title>Document</title>
-    <html lang="en">
+    <meta name="description" content="Patricia is a front-end engineer based in Portugal.">
+    <title>Front-end Developer - Patricia Pereira</title>
+      <html lang="en">
       <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -41,15 +42,15 @@
   <body>
      <div class="container">
     <nav class="d-flex justify-content-between">
-      <a href="/">
-            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="" />
-          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="" />
+      <a href="/" title="Homepage">
+            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Patricia logo" />
+          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Patricia logo" />
         <ul>
           <li class="active">
-            <a href="/"> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+            <a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Patricia"> About</a></li>
+          <li><a href="/work.html"title="Patricia's work"> Work</a></li>
+          <li><a href="/contact.html"title="Contact Patricia"> Contact</a></li>
         </a>
         </ul>
       </div>
@@ -58,7 +59,7 @@
       <p>✌ Hello, I am</p>
       <h1>Patricia Pereira</h1>
       <h2 class="mb-3">Front-end Developer based in Portugal</h2>
-      <div><a href="#" class="btn btn-primary">Contact me</a></div>
+      <div><a href="/contact.html" class="btn btn-primary" title="Contact me">Contact me</a></div>
     </div>
     <p class="text-center m-3">
       Featured Project which my best projects be choice to show
@@ -66,7 +67,7 @@
     <div class="container">
       <div class="row mb-3">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png.png" class="img-fluid" alt="" />
+          <img src="images/yogurt.png.png" class="img-fluid" alt="Yougurt project preview" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -77,7 +78,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">Launch project</a>
+            <a href="/work.html" class="btn btn-branding-outline">Launch project</a>
           </div>
         </div>
       </div>
@@ -91,16 +92,16 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">Launch project</a>
+            <a href="/work.html" class="btn btn-branding-outline">Launch project</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/Weather.png.png" class="img-fluid" alt="" />
+          <img src="images/Weather.png.png" class="img-fluid" alt="Weather project preview" />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Dictionary.png.png" class="img-fluid" alt="" />
+          <img src="images/Dictionary.png.png" class="img-fluid" alt="Dictionary app preview" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -111,37 +112,41 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">Launch project</a>
+            <a href="/work.html" class="btn btn-branding-outline">Launch project</a>
           </div>
         </div>
       </div>
-      <footer>
+      <footer class="container">
         <div class="contact-box d-flex justify-content-between mb-4">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href class="btn btn-primary mt-3">Contact me</a>
+            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Patricia">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:patricia@gmail.com" class="e-mail-link"
+          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Patricia"
             >patricia@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-4">
-          <a href="https://wwww.github.com/patricia" target="_blank"
+          <a href="https://wwww.github.com/patricia" target="_blank" title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://wwww.instagram.com/patricia" target="_blank"
+          <a href="https://wwww.instagram.com/patricia" target="_blank" title="Instagram Profile"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://wwww.facebook.com/patricia" target="_blank"
+          <a href="https://wwww.facebook.com/patricia" target="_blank" title="Twitter Profile"
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </div>
-      </footer>
+        <p class="text-center mt-4">This project was coded by Patricia Pereira and it is 
+          <a href="https://github.com/Katusha-K/Portfolio-Katia" 
+          target="_blank">
+         open-sourced</a>👌</p>
+       </footer>
     </div>
   </body>
 </html>
