--- a/work.html
+++ b/work.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!DOCTYPE html>
-    <title>Document</title>
-    <html lang="en">
+    
+
+        <meta name="description" content="Projects made by Patricia. Patricia is a front-end engineer based in Portugal.">
+    <title>Projects by Patricia - Patricia Pereira</title>
+     <html lang="en">
       <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -36,32 +38,78 @@
         ></script>
 </head>
   <body>
+    <div class="container">
+    <nav class="d-flex justify-content-between">
+      <a href="/" title="Homepage">
+            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Patricia logo" />
+          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Patricia logo" />
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Patricia"> About</a></li>
+          <li class="active"><a href="/work.html"title="Patricia's work"> Work</a></li>
+          <li><a href="/contact.html"title="Contact Patricia"> Contact</a></li>
+        </a>
+        </ul>
+      </div>
+    </nav>
     <div class="content-container container">
         <div class="content">
          <h1 class="mb-4">Take a look at what I've been working on!</h1>
     <div class="row">
     <div class="col-md-6 mb-4">
-<img src="images/yogurt.png.png" class="img-fluid rounded" alt="" />
+<img src="images/yogurt.png.png" class="img-fluid rounded" alt="Yougurt project preview" />
 <h3 class="text-center">Yogurt Project</h3> 
 <p class="text-center text-muted">Built with HTML and CSS</p>
 </div>
  <div class="col-md-6 mb-4">
-<img src="images/Weather.png.png" class="img-fluid rounded" alt="" />
+<img src="images/Weather.png.png" class="img-fluid rounded" alt="Weather app preview" />
 <h3 class="text-center">Weather Project</h3> 
 <p class="text-center text-muted">Built with HTML and CSS</p>
 </div>
 <div class="col-md-6 mb-4">
-<img src="images/Dictionary.png.png" class="img-fluid rounded" alt="" />
+<img src="images/Dictionary.png.png" class="img-fluid rounded" alt="Dictionary App preview" />
 <h3 class="text-center">Dictionary App</h3> 
 <p class="text-center text-muted">Built with HTML and CSS</p>
 </div>
 <div class="col-md-6 mb-4">
-<img src="images/Translation.app.png" class="img-fluid rounded" alt="" />
+<img src="images/Translation.app.png" class="img-fluid rounded" alt="Translation project preview" />
 <h3 class="text-center">Translation App</h3> 
 <p class="text-center text-muted">Built with HTML and CSS</p>
 </div>
     </div>
         </div>
     </div>
+      <footer class="container">
+        <div class="contact-box d-flex justify-content-between mb-4">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Patricia">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Patricia"
+            >patricia@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-4">
+          <a href="https://wwww.github.com/patricia" target="_blank" title="GitHub Profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://wwww.instagram.com/patricia" target="_blank" title="Instagram Profile"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://wwww.facebook.com/patricia" target="_blank" title="Twitter Profile"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </div>
+        <p class="text-center mt-4">This project was coded by Patricia Pereira and it is 
+          <a href="https://github.com/Katusha-K/Portfolio-Katia" 
+          target="_blank">
+         open-sourced</a>👌</p>
+       </footer>
   </body>
 </html>
