--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!DOCTYPE html>
-    <meta name="description" content="Patricia is a front-end engineer based in Portugal.">
-    <title>Front-end Developer - Patricia Pereira</title>
+    <meta name="description" content="Katia is a front-end engineer from Kyiv, Ukraine.">
+    <title>Front-end Developer - Katia Kanievska</title>
       <html lang="en">
       <head>
         <meta charset="utf-8" />
@@ -43,22 +43,22 @@
      <div class="container">
     <nav class="d-flex justify-content-between">
       <a href="/" title="Homepage">
-            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Patricia logo" />
-          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Patricia logo" />
+            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Katia logo" />
+          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Katia logo" />
         <ul>
           <li class="active">
             <a href="/" title="Homepage"> Home</a></li>
-          <li><a href="/about.html" title="About Patricia"> About</a></li>
-          <li><a href="/work.html"title="Patricia's work"> Work</a></li>
-          <li><a href="/contact.html"title="Contact Patricia"> Contact</a></li>
+          <li><a href="/about.html" title="About Katia"> About</a></li>
+          <li><a href="/work.html"title="Katia's work"> Work</a></li>
+          <li><a href="/contact.html"title="Contact Katia"> Contact</a></li>
         </a>
         </ul>
       </div>
     </nav>
     <div class="hero">
-      <p>✌ Hello, I am</p>
-      <h1>Patricia Pereira</h1>
-      <h2 class="mb-3">Front-end Developer based in Portugal</h2>
+      <p class="mb-4">✌ Hello, I am</p>
+      <h1 class="mb-4">Katia Kanievska</h1>
+      <h2 class="mb-5">Front-end Developer from Kyiv, Ukraine</h2>
       <div><a href="/contact.html" class="btn btn-primary" title="Contact me">Contact me</a></div>
     </div>
     <p class="text-center m-3">
@@ -123,12 +123,12 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Patricia">Contact me</a>
+            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Katia">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Patricia"
-            >patricia@gmail.com</a
+          <a href="mailto:katia.kanievska@gmail.com" class="e-mail-link" title="Email Katia"
+            >Katia.Kanievska@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-4">
@@ -142,7 +142,7 @@
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </div>
-        <p class="text-center mt-4">This project was coded by Patricia Pereira and it is 
+        <p class="text-center mt-4">This project was coded by Katia Kanievska and it is 
           <a href="https://github.com/Katusha-K/Portfolio-Katia" 
           target="_blank">
          open-sourced</a>👌</p>
