--- a/work.html
+++ b/work.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
 
-        <meta name="description" content="Projects made by Patricia. Patricia is a front-end engineer based in Portugal.">
-    <title>Projects by Patricia - Patricia Pereira</title>
+        <meta name="description" content="Projects made by Katia. Katia is a front-end engineer from Kyiv, Ukraine.">
+    <title>Projects by Katia - Katia Kanievska</title>
      <html lang="en">
       <head>
         <meta charset="utf-8" />
@@ -41,14 +41,14 @@
     <div class="container">
     <nav class="d-flex justify-content-between">
       <a href="/" title="Homepage">
-            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Patricia logo" />
-          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Patricia logo" />
+            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Katia logo" />
+          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Katia logo" />
         <ul>
           <li>
             <a href="/" title="Homepage"> Home</a></li>
-          <li><a href="/about.html" title="About Patricia"> About</a></li>
-          <li class="active"><a href="/work.html"title="Patricia's work"> Work</a></li>
-          <li><a href="/contact.html"title="Contact Patricia"> Contact</a></li>
+          <li><a href="/about.html" title="About Katia"> About</a></li>
+          <li class="active"><a href="/work.html"title="Katia's work"> Work</a></li>
+          <li><a href="/contact.html"title="Contact Katia"> Contact</a></li>
         </a>
         </ul>
       </div>
@@ -87,12 +87,12 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Patricia">Contact me</a>
+            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Katia">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Patricia"
-            >patricia@gmail.com</a
+          <a href="mailto:katia@gmail.com" class="e-mail-link" title="Email Katia"
+            >katia.kanievska@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-4">
@@ -106,7 +106,7 @@
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </div>
-        <p class="text-center mt-4">This project was coded by Patricia Pereira and it is 
+        <p class="text-center mt-4">This project was coded by Katia Kanievska and it is 
           <a href="https://github.com/Katusha-K/Portfolio-Katia" 
           target="_blank">
          open-sourced</a>👌</p>
