--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!DOCTYPE html>
-        <meta name="description" content="Short bio about me. Patricia is a front-end engineer based in Portugal.">
-    <title> About me info - Patricia Pereira</title>
+        <meta name="description" content="Short bio about me. Katia is a front-end engineer from Kyiv, Ukraine.">
+    <title> About me info - Katia Kanievska</title>
     
     <html lang="en">
       <head>
@@ -41,14 +41,14 @@
     <div class="container">
     <nav class="d-flex justify-content-between">
       <a href="/" title="Homepage">
-            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Patricia logo" />
-          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Patricia logo" />
+            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Katia logo" />
+          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Katia logo" />
         <ul>
           <li>
             <a href="/" title="Homepage"> Home</a></li>
-          <li class="active"><a href="/about.html" title="About Patricia"> About</a></li>
-          <li><a href="/work.html"title="Patricia's work"> Work</a></li>
-          <li><a href="/contact.html"title="Contact Patricia"> Contact</a></li>
+          <li class="active"><a href="/about.html" title="About Katia"> About</a></li>
+          <li><a href="/work.html"title="Katia's work"> Work</a></li>
+          <li><a href="/contact.html"title="Contact Katia"> Contact</a></li>
         </a>
         </ul>
       </div>
@@ -57,8 +57,8 @@
         <div class="row">
         <div class="col-lg-6">
             <div class="content">
-    <h1 class="mb-4">Hi I am Patricia Pereira</h1>
-    <h2 class="mb-4">Frontend Developer, based in Portugal</h2>
+    <h1 class="mb-4">Hi I am Katia Kanievska</h1>
+    <h2 class="mb-4">Frontend Developer from Kyiv, Ukraine</h2>
     <p class="mb-4">
       For anyone who wants to start learning code, this workshop is very
       interesting. You will be challenged with different exercises, and
@@ -69,7 +69,7 @@
 </div>
 </div>
      <div class="col-lg-6">
-    <img src="images/Patricia picture.png" alt="Patricia photo" class="img-fluid" />
+    <img src="images/Pic in Lviv.jpg" alt="Katia's photo" class="img-fluid" />
     </div>
     </div>
       <footer class="container">
@@ -79,13 +79,13 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Patricia">Contact me</a>
+            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Katia">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Patricia"
-            >patricia@gmail.com</a
-          >
+          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Katia"
+            >katia.kanievska@gmail.com</a>
+          
         </div>
         <div class="social-links d-flex justify-content-center mb-4">
           <a href="https://wwww.github.com/patricia" target="_blank" title="GitHub Profile"
@@ -98,7 +98,7 @@
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </div>
-        <p class="text-center mt-4">This project was coded by Patricia Pereira and it is 
+        <p class="text-center mt-4">This project was coded by Katia Kanievska and it is 
           <a href="https://github.com/Katusha-K/Portfolio-Katia" 
           target="_blank">
          open-sourced</a>👌</p>
