--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!DOCTYPE html>
     <meta name="description" content="Contact Patricia. Patricia is a front-end engineer based in Portugal.">
-    <title>Contact Patricia- Patricia Pereira</title>
+    <title>Contact Katia - Katia Kanievska</title>
         <html lang="en">
       <head>
         <meta charset="utf-8" />
@@ -40,14 +40,14 @@
     <div class="container">
     <nav class="d-flex justify-content-between">
       <a href="/" title="Homepage">
-            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Patricia logo" />
-          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Patricia logo" />
+            <img src="images/Shecodes.logo.png" class="logo d-none d-md-block" alt="Katia logo" />
+          <img src="images/She codes-logo-small.jpg" class="logo d-block d-md-none" alt="Katialogo" />
         <ul>
           <li>
             <a href="/" title="Homepage"> Home</a></li>
-          <li><a href="/about.html" title="About Patricia"> About</a></li>
-          <li><a href="/work.html"title="Patricia's work"> Work</a></li>
-          <li class="active"><a href="/contact.html"title="Contact Patricia"> Contact</a></li>
+          <li><a href="/about.html" title="About Katia"> About</a></li>
+          <li><a href="/work.html"title="Katia's work"> Work</a></li>
+          <li class="active"><a href="/contact.html"title="Contact Katia"> Contact</a></li>
         </a>
         </ul>
       </div>
@@ -58,11 +58,11 @@
 </h1>
     <h3>Email</h3>
     <p>
-        <a href="mailto:patricia@gmail.com">patricia@gmail.com</a></p>
+        <a href="mailto:katia@gmail.com">katia@gmail.com</a></p>
     <h3>Twitter</h3>
-    <p><a href="https://www.twitter.com/patricia" target="_blank">@patricia.codes</a></p>
+    <p><a href="https://www.twitter.com/Katia" target="_blank">@Katiacodes</a></p>
     <h3>Instagram</h3>
-    <p><a href="https://www.instagram.com/patricia" target="_blank">@patricia.codes</a></p>
+    <p><a href="https://www.instagram.com/Katia" target="_blank">@Katiacodes</a></p>
     </div>
         </div>
     </div>
@@ -73,26 +73,26 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Patricia">Contact me</a>
+            <a href="/contact.html" class="btn btn-primary mt-3" title="Contact Katia">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Patricia"
+          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Katia
             >patricia@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-4">
-          <a href="https://wwww.github.com/patricia" target="_blank" title="GitHub Profile"
+          <a href="https://wwww.github.com/Katia" target="_blank" title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://wwww.instagram.com/patricia" target="_blank" title="Instagram Profile"
+          <a href="https://wwww.instagram.com/Katia" target="_blank" title="Instagram Profile"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://wwww.facebook.com/patricia" target="_blank" title="Twitter Profile"
+          <a href="https://wwww.facebook.com/Katia" target="_blank" title="Twitter Profile"
             ><i class="fa-brands fa-facebook"></i
           ></a>
         </div>
-        <p class="text-center mt-4">This project was coded by Patricia Pereira and it is 
+        <p class="text-center mt-4">This project was coded by Katia Kanievska and it is 
           <a href="https://github.com/Katusha-K/Portfolio-Katia" 
           target="_blank">
          open-sourced</a>👌</p>
