--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,21 @@
         <div class="content">
          <h1 class="mb-4">Let's get in touch!
 </h1>
+<div class="row">
+  <div class="col-md-8">
+    <form action="https://formspree.io/f/mwkalajy" method="POST" class="border p-3 rounded mb-3">
+              <div class="mb-3">
+                <label class="form-label"> Your email: </label>
+                <input type="email" name="_replyto" class="form-control" required="" autofocus="">
+              </div>
+              <div class="mb-3">
+                <label class="form-label"> Your message: </label>
+                <textarea name="message" class="form-control" required=""></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Send</button>
+            </form>
+  </div>
+<div class="col-md-4">
     <h3>Email</h3>
     <p>
         <a href="mailto:katia@gmail.com">katia@gmail.com</a></p>
@@ -64,7 +79,8 @@
     <h3>Instagram</h3>
     <p><a href="https://www.instagram.com/Katia" target="_blank">@Katiacodes</a></p>
     </div>
-        </div>
+    </div>
+    </div>
     </div>
       <footer class="container">
         <div class="contact-box d-flex justify-content-between mb-4">
@@ -77,8 +93,8 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:patricia@gmail.com" class="e-mail-link" title="Email Katia
-            >patricia@gmail.com</a
+          <a href="mailto:Katia.kanievska@gmail.com" class="e-mail-link" title="Email Katia"
+            >Katia.Kanievska@gmail.com </a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-4">
